blogs/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
spec:
  replicas: 2 # This will be overridden in specific environments
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
      - name: django-app
        image: django-local
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: sqlite-storage
          mountPath: /app/db 
        - name: media-volume
          mountPath: /app/media/images  
      volumes:
      - name: sqlite-storage
        persistentVolumeClaim:
          claimName: django-sqlite-pvc
      - name: media-volume
        persistentVolumeClaim:
          claimName: media-pvc
