blogs/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30000
  selector:
    app: django-app
